examples/vbcmn15/fail/reordWR.stl
/** reordRR **/
global x y; 
local l m; 

/** Optimised **/ 
write(x,l); 
read(y,m); 

/** Unoptimised **/ 
read(y,m); 
write(x,l); 
